--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,6 @@
     "@next/next/no-page-custom-font": "off",
     "no-unused-vars": "off",
     "no-console": "off",
-    "no-explicit-any":"off"
+   "@typescript-eslint/no-explicit-any": "off"
   }
 }
